# npc-neural-affect-matrix

./: Cargo.toml  Dockerfile  Dockerfile.web  README.md  build.rs  build.sh  docker-compose.yml  run-web-server.sh
.cargo/: config.toml
docs/: ALGORITHM_ANALYSIS.md  PERSISTENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TEST_RESULTS.md  WEB_API.md  model_train_plan.md
examples/: web_api_test.sh  web_api_test_simple.sh
src/: lib.rs  main.rs
src/api/services/: evaluator_service.rs
src/modules/memory/: store.rs
src/web/: error.rs  mod.rs  routes.rs  types.rs
web-ui/: QUICKSTART_WEBUI.md  README.md  index.html
